# lichtenstein-server

./: .gitignore  .gitmodules  CMakeLists.txt  Makefile  README.md  lichtenstein.conf
client/: CMakeLists.txt  README.md  lichtenstein.conf
client/plugin/dummy/: DummyChannel.cpp  DummyChannel.h  PluginManager.h  info.cpp
client/plugin/ledchain/: IOutputChannel.h  LedchainChannel.cpp  LedchainChannel.h  LedchainPlugin.cpp  LedchainPlugin.h
client/plugin/rpi/: OutputChannel.cpp  OutputChannel.h  Plugin.cpp  Plugin.h  PluginInfo.h  info.cpp
client/src/: main.cpp
client/src/output/: IOutputChannel.h  PluginInfo.h  PluginManager.cpp  PluginManager.h
client/src/proto/: Client.cpp  Client.h  ClientIO.cpp  MulticastReceiver.cpp  MulticastReceiver.h
cmake/: FindLibreSSL.cmake
doc/: Command Server Protocol.md  Lichtenstein Protocol.md
libs/: .gitignore  README.md  liblichtenstein
libs/cista/include/: cista.h
scripts/: README.md  breathe.as  fire.as  rainbow.as  stars.as  test.as  ticker.as
server/: .gitignore  CMakeLists.txt  README.md  lichtenstein.conf
server/src/: main.cpp  version.cpp.in
server/src/api/: HandlerFactory.cpp  IController.cpp  IController.h  Server.cpp
server/src/api/controllers/: Groups.cpp  NodeChannels.cpp  NodeChannels.h  Nodes.cpp  Nodes.h  Pipeline.cpp  Pipeline.h  Routines.cpp  ServerInfo.cpp
server/src/db/: DataStore.cpp  DataStore.h  DataStorePrimitives.cpp  DataStorePrimitives.h  SerializedStructs.h  packed_v1.capnp
server/src/proto/: IMessageHandler.cpp  IMessageHandler.h  Server.cpp  Server.h  ServerWorker.cpp  ServerWorker.h  Syncer.cpp  Syncer.h  lichtenstein_v1.capnp
server/src/proto/auth/: ChallengeHandler.cpp  ChallengeHandler.h  IAuthHandler.h
server/src/proto/controllers/: Authentication.cpp  Authentication.h  ChannelData.cpp  ChannelData.h  DefaultEndpoint.cpp  DefaultEndpoint.h  MulticastControl.cpp  MulticastControl.h
server/src/render/: BrightnessTransformer.cpp  BrightnessTransformer.h  FbRange.h  FillRenderable.cpp  FillRenderable.h  Framebuffer.cpp  Framebuffer.h  GroupTarget.cpp  GroupTarget.h  HSIPixel.h  IGroupContainer.h  IPixelTransformer.h  IRenderable.h  MultiGroupTarget.cpp  Pipeline.cpp  Pipeline.h  RGBPixel.h  RGBWPixel.h  RoutineRenderable.cpp  RoutineRenderable.h
shared/src/: ConfigManager.cpp  ConfigManager.h  Format.h  Logging.cpp  SocketTypes+fmt.h
shared/src/proto/: MulticastCrypto.cpp  MulticastCrypto.h  ProtoMessages.h  WireMessage.h  lichtenstein_v1.capnp
src/: .main.d  CommandServer.cpp  CommandServer.h  ConfigManager.cpp  ConfigManager.h  DataStore+Groups.cpp  DataStore+Nodes.cpp  DataStore+Routines.cpp  DataStore.cpp  DataStore.h  EffectRunner.cpp  EffectRunner.h  Framebuffer.cpp  Framebuffer.h  HSIPixel.cpp  HSIPixel.h  LichtensteinUtils.cpp  LichtensteinUtils.h  Logging.cpp  Logging.h  LoggingAssert.h  NodeDiscovery.cpp  NodeDiscovery.h  OutputMapper.cpp  OutputMapper.h  ProtocolHandler.cpp  ProtocolHandler.h  Routine.cpp  Routine.h  lichtenstein_proto.h  main.cpp  version.h
src/api/: API.cpp  API.h  ClientHandler.cpp  ClientHandler.h  HandlerFactory.cpp  HandlerFactory.h  IController.cpp  IController.h  IRequestHandler.h  README.md  Server.cpp  Server.h
src/api/controllers/: Groups.cpp  Groups.h  NodeChannels.cpp  Nodes.cpp  Nodes.h  Pipeline.cpp  Routines.cpp  Routines.h  ServerInfo.cpp  ServerInfo.h
src/api/handlers/: AuthHello.cpp  AuthHello.h
src/config/: Config.cpp  Config.h  ConfigReader.cpp  ConfigReader.h  Defaults.cpp  Defaults.h
src/crc32/: crc32.cpp  crc32.h  crclut.h
src/db/: Channel.cpp  Channel.h  DataStore.cpp  DataStore.h  DataStore2.cpp  DataStore2.h  DataStorePrimitives+Json.cpp  DataStorePrimitives+Json.h  DataStorePrimitives.cpp  DataStorePrimitives.h  Group.cpp  Group.h  Node.cpp  Node.h  Routine.cpp  Routine.h
src/db/types/: Info.cpp  Info.h
src/helpers/: IPHelpers.cpp  IPHelpers.h
src/proto/: IMessageHandler.cpp  IMessageHandler.h  Server.cpp  Server.h  ServerWorker.cpp  ServerWorker.h  SocketTypes+fmt.h  WireMessage.h  lichtenstein_v1.capnp
src/proto/auth/: ChallengeHandler.cpp  ChallengeHandler.h  IAuthHandler.h
src/proto/controllers/: Authentication.cpp  Authentication.h
src/protocol/: AdoptionHandler.cpp  AdoptionHandler.h  ProtocolHandler.cpp  ProtocolHandler.h
src/render/: BrightnessTransformer.cpp  FbRange.h  FillRenderable.cpp  FillRenderable.h  Framebuffer.cpp  Framebuffer.h  GroupTarget.cpp  GroupTarget.h  HSIPixel.h  IGroupContainer.h  IRenderTarget.h  IRenderable.h  MultiGroupTarget.cpp  MultiGroupTarget.h  Pipeline.cpp  Pipeline.h  PixelTypes+Json.cpp  RoutineRenderable.cpp  RoutineRenderable.h
src/rt/: API.cpp  API.h  ClientHandler.cpp  ClientHandler.h  HandlerFactory.cpp  HandlerFactory.h  IRequestHandler.h  PixelDataHandler.cpp  PixelDataHandler.h  README.md
src/rt/handlers/: AuthHello.cpp  AuthHello.h  ChannelDataAck.cpp  ChannelDataAck.h  JoinChannel.cpp  JoinChannel.h
src/sql/: schema_v1.sql
tools/: .gitignore  crctabgen.c  multicast_sender.cpp  wireshark_dissector.cpp
